# docker-python-nodejs

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile-python3.9-nodejs12  Dockerfile-template  LICENSE  Pipfile  README.md  build_versions.py  generate_versions.py  git_archive.sh  install-poetry.sh  pyproject.toml  renovate.json  template-alpine.Dockerfile  template-bullseye.Dockerfile  template-buster.Dockerfile  template-slim.Dockerfile  template-stretch.Dockerfile  versions.json
.circleci/: config.yml  config_template.yml
.github/: main.workflow
.github/workflows/: build.yaml  debug-context.yaml  tests.yaml
build_versions/: ci_config.py  ci_matrix.py  docker_build.py  docker_hub.py  dockerfile.py  dockerfiles.py  logger.py  main.py  nodejs_versions.py  readme.py  settings.py  test_all.py  versions.py
src/docker_python_nodejs/: __init__.py  build_matrix.py  ci_matrix.py  cli.py  docker_hub.py  dockerfiles.py  nodejs_versions.py  readme.py  settings.py  versions.py
templates/: alpine.Dockerfile  debian.Dockerfile
tests/: test_all.py
