[project]
name = "docker-python-nodejs"
version = "0.1.0"
dependencies = [
  "requests",
  "semver",
  "beautifulsoup4",
  "jinja2",
]
requires-python = "== 3.12"

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "ruff==0.5.0",
  "pytest-cov",
  "mypy",
  "types-requests==2.32.0.20240622",
  "types-beautifulsoup4==4.12.0.20240511",
  "pytest-socket",
  "responses",
]

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
  "T201",  # This is a cli
  "DTZ003", # Allow naive datetimes
  "FBT002", # Allow boolean traps
  "G004", # Allow using f-strings when logging
  "D", # FIXME: docs
  "TD", # Allow TODOs
  "FBT001", # Allow boolean function args
  "FIX001" # Allow fixme's
]
target-version = "py311"

[tool.ruff.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.mypy]
strict = true
disallow_any_unimported = true
no_implicit_optional = true


[tool.pytest.ini_options]
addopts = "--disable-socket"
