[project]
name = "docker-python-nodejs"
version = "0.1.0"
dependencies = [
  "requests",
  "semver",
  "beautifulsoup4",
  "jinja2",
]
description = "Build docker images with Python and Node.js"
readme = "README.md"
requires-python = "~= 3.13.0"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
dpn = "docker_python_nodejs:dpn"

[dependency-groups]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
  "pytest-cov",
  "mypy",
  "types-requests",
  "types-beautifulsoup4",
  "pytest-socket",
  "responses",
]

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
  "T201",  # This is a cli
  "DTZ003", # Allow naive datetimes
  "FBT002", # Allow boolean traps
  "G004", # Allow using f-strings when logging
  "D", # FIXME: docs
  "TD", # Allow TODOs
  "FBT001", # Allow boolean function args
  "FIX001" # Allow fixme's
]
target-version = "py312"

[tool.ruff.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.mypy]
strict = true
disallow_any_unimported = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "--disable-socket"
